[package]
name = "jellyfin-audio-wasm"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM audio processors for Jellyfin web player - Time stretch, limiter, EQ"
authors = ["Jellyfin Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rubato = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioWorkletNode",
]

[profile.release]
opt-level = 3
lto = true
